dashboard page overflow-x Hidden solved

--- a/app/assets/stylesheets/layouts/_base.scss
+++ b/app/assets/stylesheets/layouts/_base.scss
@@ -7,3 +7,7 @@ a:hover, a:focus {
 a {
   transition: 0.2s;
 }
+
+body {
+  overflow-x: hidden;
+}
